--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -398,6 +398,19 @@
     }
   }
 
+  &_mob-smaller {
+    @include screen('sm') {
+      @include text15;
+
+      line-height: (26/15);
+      border-radius: 15px;
+
+      #{$b}__text {
+        padding: 2px 27px 3px;
+      }
+    }
+  }
+
   &_border {
     &_small {
       #{$b}__text {
