--- a/app/blocks/form-elements/form-range.scss
+++ b/app/blocks/form-elements/form-range.scss
@@ -13,15 +13,20 @@
     box-sizing: border-box;
     padding: 0 14px;
 
+    @include screen('sm') {
+      padding: 0 11px;
+    }
+
     &::before {
       @include pseudo;
 
       width: 100%;
-      height: 2px;
+      height: 3px;
       background-color: $color-range-track;
       top: 50%;
       left: 0;
       transform: translate3d(0, -50%, 0);
+      border-radius: 2px;
       z-index: 1;
     }
   }
@@ -30,6 +35,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include screen('sm') {
+      margin-top: -5px;
+    }
   }
 
   &__value {
@@ -38,13 +47,17 @@
     font-weight: 700;
 
     @include screen('sm') {
-      @include text;
+      @include text13;
 
-      line-height: (26/14);
+      line-height: (15/13);
     }
 
     &:not(:last-child) {
       margin-right: 20px;
+
+      @include screen('sm') {
+        margin-right: 10px;
+      }
     }
   }
 }
@@ -53,7 +66,7 @@
   // z-index: 2;
 
   &-base {
-    height: 2px;
+    height: 3px;
     background-color: $color-range-track;
     position: relative;
     border-radius: 2px;
@@ -65,6 +78,7 @@
     position: absolute;
     background-color: $color-main;
     background-image: linear-gradient(to right, rgba(11, 208, 167, 0.99) 0%, rgba(0, 129, 153, 0.99) 100%);
+    border-radius: 2px;
     z-index: 2;
   }
 
@@ -80,6 +94,12 @@
     box-sizing: border-box;
     transition: background $ease-main;
     cursor: pointer;
+
+    @include screen('sm') {
+      width: 22px;
+      height: 22px;
+      border-width: 1px;
+    }
 
     &:hover {
       background-color: $color-range-handler-active;
