--- a/app/components/filter/filter.scss
+++ b/app/components/filter/filter.scss
@@ -67,7 +67,8 @@
 
       @include screen('sm') {
         left: -10px;
-        height: 40px;
+        top: -4px;
+        height: 32px;
         width: calc(100% + 20px);
       }
     }
