--- a/app/components/search-filter/search-filter.pug
+++ b/app/components/search-filter/search-filter.pug
@@ -7,6 +7,9 @@ mixin search-filter()
           +advanced-filter()
         +e.popup(data-filter="workplace")
           +advanced-filter2()
+        +form-panel.__panel.is-always-fixed
+          +link-icon('select-arrow', 'button')(type="button" data-target-form="location-filter-big")._back._bold._no-shadow.__link.js-close-advanced-filter.js-simple-reset Cancel
+          +button('button')(type="submit")._mob-smaller.__button_w360 Show results: 320
         +filter-search._search.__filter
         +e.buttons
           +b.BUTTON.link_icon._icon_gray._no-shadow._bold._icon_mid-small.__button_clear.js-simple-reset(type="reset" data-target-form="location-filter-big")
