--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -138,6 +138,8 @@ $color-text-gray3: #707a86;
 $color-title-dark: #2d333b;
 $color-range-track: #ececec;
 $color-range-handler-active: #434b57;
+$color-hide-button-border: #e1e8ea;
+$color-button-radio-border: #c5c9ca;
 
 // ##########
 // Transitions
