--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -28,7 +28,7 @@
       @include text-mid;
 
       @include screen('sm') {
-        @include text16;
+        @include text15;
       }
     }
 
@@ -274,10 +274,20 @@
 
     .input {
       padding-bottom: 4px;
+
+      @include screen('sm') {
+        padding-top: 0;
+        padding-bottom: 0;
+      }
     }
 
     #{$b}__icon {
+      right: 0;
       bottom: 12px;
+
+      @include screen('sm') {
+        bottom: 8px;
+      }
     }
   }
 
