--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -69,12 +69,20 @@
     &_mg50 {
       &:not(:last-of-type) {
         margin-bottom: 50px;
+
+        @include screen('sm') {
+          margin-bottom: 20px;
+        }
       }
     }
 
     &_mg52 {
       &:not(:last-of-type) {
         margin-bottom: 52px;
+
+        @include screen('sm') {
+          margin-bottom: 22px;
+        }
       }
     }
 
@@ -110,14 +118,26 @@
 
     &_pb {
       padding-bottom: 57px;
+
+      @include screen('sm') {
+        padding-bottom: 27px;
+      }
     }
 
     &_pb46 {
       padding-bottom: 46px;
+
+      @include screen('sm') {
+        padding-bottom: 22px;
+      }
     }
 
     &_pb72 {
       padding-bottom: 72px;
+
+      @include screen('sm') {
+        padding-bottom: 30px;
+      }
     }
 
     &_mta {
@@ -192,6 +212,14 @@
       }
     }
 
+    &_mg32 {
+      margin-bottom: 32px;
+
+      @include screen('sm') {
+        margin-bottom: 10px;
+      }
+    }
+
     &_mg35 {
       margin-bottom: 35px;
 
@@ -200,8 +228,20 @@
       }
     }
 
+    &_mg35-2 {
+      margin-bottom: 35px;
+
+      @include screen('sm') {
+        margin-bottom: 12px;
+      }
+    }
+
     &_mg40 {
       margin-bottom: 40px;
+
+      @include screen('sm') {
+        margin-bottom: 8px;
+      }
     }
 
     &_mg46 {
@@ -212,8 +252,20 @@
       }
     }
 
+    &_mg46-2 {
+      margin-bottom: 46px;
+
+      @include screen('sm') {
+        margin-bottom: 18px;
+      }
+    }
+
     &_mg47 {
       margin-bottom: 47px;
+
+      @include screen('sm') {
+        margin-bottom: 10px;
+      }
     }
 
     &_mg49 {
@@ -221,6 +273,14 @@
 
       @include screen('sm') {
         margin-bottom: 60px;
+      }
+    }
+
+    &_mg49-2 {
+      margin-bottom: 49px;
+
+      @include screen('sm') {
+        margin-bottom: 25px;
       }
     }
 
@@ -284,6 +344,10 @@
     &_mg0 {
       &:not(:last-child) {
         margin-bottom: 0;
+
+        @include screen('sm') {
+          margin-bottom: 5px;
+        }
       }
     }
 
@@ -309,6 +373,18 @@
         @include text-mid;
 
         line-height: (20/17);
+      }
+    }
+
+    &_small2 {
+      @include text-big;
+
+      font-weight: 700;
+
+      @include screen('sm') {
+        @include text15;
+
+        line-height: (20/15);
       }
     }
 
@@ -356,6 +432,24 @@
       color: $color-placeholder;
     }
 
+    &_small {
+
+      @include screen('sm') {
+        @include text-small;
+
+        line-height: 1.2;
+      }
+    }
+
+    &_small2 {
+
+      @include screen('sm') {
+        @include text10;
+
+        line-height: 1.2;
+      }
+    }
+
     &_big {
       @include text16;
 
@@ -384,6 +478,10 @@
 
     &_mg-2 {
       margin-top: -2px;
+
+      @include screen('sm') {
+        margin-top: 0;
+      }
     }
   }
 
@@ -523,6 +621,10 @@
     &_w368 {
       width: 368px;
       max-width: 100%;
+
+      @include screen('sm') {
+        width: 100%;
+      }
     }
   }
 
@@ -572,6 +674,15 @@
 
     &_mgt-10 {
       margin-top: -10px;
+    }
+
+    &.is-fixed {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+
+
     }
   }
 
@@ -919,10 +1030,31 @@
     align-content: flex-start;
     flex-wrap: wrap;
     margin-top: -11px;
+    width: 100%;
+
+    @include screen('md') {
+      display: inline-flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
     &_line {
       box-sizing: border-box;
       padding: 0 4px;
+
+      @include screen('sm') {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 0;
+        margin-left: -3px;
+      }
+    }
+
+    &_columns {
+      @include screen('sm') {
+        margin-top: -7.5px;
+      }
     }
   }
 
@@ -935,8 +1067,33 @@
       width: 230px;
       margin-right: 30px;
 
+      @include screen('md') {
+        width: 160px;
+      }
+
       @include screen('sm') {
         width: 100%;
+        margin-right: 0;
+        margin-top: 7.5px;
+      }
+
+      &:nth-child(3n) {
+        @media only screen and (min-width: 768px) and (max-width: 1019px) {
+          margin-right: 0;
+        }
+      }
+    }
+
+    #{$b}__list_columns_sm2 & {
+      @include screen('sm') {
+        width: 47.2%;
+        margin-right: 10px;
+      }
+
+      &:nth-child(even) {
+        @include screen('sm') {
+          margin-right: 0;
+        }
       }
     }
 
@@ -944,6 +1101,10 @@
 
       &:not(:last-child) {
         margin-right: 59px;
+
+        @include screen('md') {
+          margin-right: 20px;
+        }
       }
     }
   }
