--- a/app/components/advanced-filter/advanced-filter.scss
+++ b/app/components/advanced-filter/advanced-filter.scss
@@ -43,6 +43,14 @@
     @include screen('lg') {
       padding: 50px 40px 35px;
     }
+
+    @include screen('md') {
+      padding: 50px 50px 35px;
+    }
+
+    @include screen('sm') {
+      padding: 50px 25px 35px;
+    }
   }
 
   &__head {
@@ -57,6 +65,16 @@
     padding-top: 8px;
     z-index: 2;
     background-color: $color-white;
+
+    @include screen('sm') {
+      justify-content: space-between;
+      padding-top: 0;
+      padding-left: 25px;
+    }
+
+    &_transparent {
+      background-color: transparent;
+    }
   }
 
   &__clear {
@@ -76,6 +94,12 @@
     width: 60px;
     height: 42px;
     position: relative;
+    background-color: $color-white;
+
+    @include screen('sm') {
+      width: 36px;
+      height: 42px;
+    }
 
     &-icon {
       position: absolute;
@@ -87,8 +111,50 @@
       transition: fill $ease-main;
       fill: $color-basic;
 
+      @include screen('sm') {
+        width: 16px;
+        height: 16px;
+      }
+
       #{$b}__close:hover & {
         fill: $color-basic-dark;
+      }
+    }
+  }
+
+  &_workplace {
+
+    #{$b} {
+      &__form {
+        padding: 46px 50px 60px;
+        overflow: hidden;
+
+        @include screen('sm') {
+          padding: 12px 10px 14px;
+        }
+
+        .form {
+
+          &__header {
+            @include screen('sm') {
+              margin-bottom: 16px;
+            }
+          }
+        }
+      }
+
+      &__head {
+        @include screen('sm') {
+          justify-content: flex-end;
+          padding-left: 0;
+        }
+      }
+
+      &__close {
+        @include screen('sm') {
+          width: 36px;
+          height: 30px;
+        }
       }
     }
   }
