--- a/app/components/filter/filter.pug
+++ b/app/components/filter/filter.pug
@@ -57,4 +57,4 @@ mixin filter-search()
       +e.wrapper
         +toggle().__toggle.js-show-advanced-filter(data-target-filter="workplace") Workplace type
       +e.wrapper
-        +toggle().__toggle.js-show-advanced-filter(data-target-filter="advancedSearch") Advanced search
+        +toggle('2').__toggle.js-show-advanced-filter(data-target-filter="advancedSearch") Advanced search
