--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -77,6 +77,7 @@ include ../blocks/pagination/pagination
 include ../blocks/panel/panel
 include ../blocks/payment-card/payment-card
 include ../blocks/photo-preview/photo-preview
+include ../blocks/places/places
 include ../blocks/popups/popups
 include ../blocks/price/price
 include ../blocks/progress/progress
