--- a/app/blocks/toggle/toggle.pug
+++ b/app/blocks/toggle/toggle.pug
@@ -3,5 +3,5 @@ mixin toggle(counter)
     +e.text
       block
     if counter
-      +e.counter!=counter
+      +e.counter(data-counter-for-filter="advancedSearch")!=counter
     +icon('select-arrow').icon
