--- a/app/components/search-map/search-map.scss
+++ b/app/components/search-map/search-map.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   width: 41.67%;
   transition: width $ease-main,
-    padding $ease-main, top $ease-main;
+    padding $ease-main, top $ease-main, opacity $ease-main;
   overflow: hidden;
 
   @include screen('lg') {
@@ -43,10 +43,10 @@
     width: 0;
     padding-left: 0;
     padding-right: 0;
+    opacity: 0;
 
     @include screen('md') {
       width: 100%;
-      opacity: 0;
       pointer-events: none;
     }
   }
