--- a/app/components/search-filter/search-filter.pug
+++ b/app/components/search-filter/search-filter.pug
@@ -8,11 +8,11 @@ mixin search-filter()
         +e.popup(data-filter="workplace")
           +advanced-filter2()
         +form-panel.__panel.is-always-fixed
-          +link-icon('select-arrow', 'button')(type="button" data-target-form="location-filter-big")._back._bold._no-shadow.__link.js-close-advanced-filter.js-simple-reset Cancel
+          +link-icon('select-arrow', 'button')(type="button")._back._bold._no-shadow.__link.js-close-advanced-filter Cancel
           +button('button')(type="submit")._mob-smaller.__button_w360 Show results: 320
         +filter-search._search.__filter
         +e.buttons
-          +b.BUTTON.link_icon._icon_gray._no-shadow._bold._icon_mid-small.__button_clear.js-simple-reset(type="reset" data-target-form="location-filter-big")
+          +b.BUTTON.link_icon._icon_gray._no-shadow._bold._icon_mid-small.__button_clear.js-simple-reset(type="reset" data-target-form="location-filter-big" data-reset-weights-for-filter="advancedSearch")
             +icon('round-cross').__icon_round-cross
             +e.SPAN.text.hide-sm Clear filter
           +link-icon('map')._icon_gray._no-shadow._bold._icon_pad27.__button.hide-md.js-toggle-map.is-active(href="#" data-target-map="map" data-closed-title="Show Map" data-opened-title="Hide Map") Hide Map
