--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -55,9 +55,9 @@ mixin slider-gallery-bold2(buttons, loupe)
     if buttons
       +e.buttons_simple
         +e.button._prev.js-slider-button-prev
-          +icon('slider-arrow-bold').__button-icon
+          +icon('slider-arrow').__button-icon
         +e.button._next.js-slider-button-next
-          +icon('slider-arrow-bold').__button-icon
+          +icon('slider-arrow').__button-icon
     if loupe
       +e.A.loupe.js-open-gallery(data-targets="gallery")
         +icon('loupe').__loupe-icon
