--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -353,6 +353,10 @@
 
   &_search {
 
+    &:hover #{$b}__title {
+      color: $color-basic;
+    }
+
     #{$b} {
       &__boxes {
 
@@ -372,6 +376,10 @@
   }
 
   &_map {
+
+    &:hover #{$b}__title {
+      color: $color-basic;
+    }
 
     #{$b} {
       &__boxes {
