--- a/app/components/advanced-filter/advanced-filter.pug
+++ b/app/components/advanced-filter/advanced-filter.pug
@@ -31,22 +31,22 @@ mixin advanced-filter()
           +form-section-content
             +e.UL.list_line
               +e.LI.item
-                +checkbox('seats', '1', true)._nobox2
+                +radio('seats', '1', true)._nobox2
                   +e.text 1 - 5
               +e.LI.item
-                +checkbox('seats', '2')._nobox2
+                +radio('seats', '2')._nobox2
                   +e.text 5 - 10
               +e.LI.item
-                +checkbox('seats', '3')._nobox2
+                +radio('seats', '3')._nobox2
                   +e.text 10 - 20
               +e.LI.item
-                +checkbox('seats', '4')._nobox2
+                +radio('seats', '4')._nobox2
                   +e.text 20 - 40
               +e.LI.item
-                +checkbox('seats', '5')._nobox2
+                +radio('seats', '5')._nobox2
                   +e.text 40 - 60
               +e.LI.item
-                +checkbox('seats', '6')._nobox2
+                +radio('seats', '6')._nobox2
                   +e.text More than 60
         +form-section._underline._mg50._pb46(data-current-weight="0" data-weight-for-filter="advancedSearch")
           +form-section-header._mg47
