--- a/app/pages/search-result/search-result.pug
+++ b/app/pages/search-result/search-result.pug
@@ -4,7 +4,7 @@ block head
   - var pageTitle = 'SpacePool - Search result'
 
 block header
-  -var headerClass = '_border'
+  -var headerClass = '_border _no-mob-border'
   -var pageClass = '_subnav'
 
 block content
