--- a/app/components/advanced-filter/advanced-filter.pug
+++ b/app/components/advanced-filter/advanced-filter.pug
@@ -7,7 +7,7 @@ mixin advanced-filter()
       +link-icon('round-cross', 'button')(type="reset"  data-target-form="location-filter-big" data-reset-weights-for-filter="advancedSearch")._icon_gray._no-shadow._bold._icon_mid-small.__clear.js-simple-reset.hide-sm Clear filter
       +e.BUTTON.close.js-close-advanced-filter(type="button")
         +icon('cross').close-icon
-    +e.scrollblock.js-scrollbar
+    +e.content
       +b.SECTION.form_white.__form
         +form-section._underline._mg50._pb.hide-from-md(data-current-weight="0" data-weight-for-filter="advancedSearch")
           +form-section-header._mg32
