--- a/app/components/advanced-filter/advanced-filter.scss
+++ b/app/components/advanced-filter/advanced-filter.scss
@@ -5,32 +5,11 @@
   display: block;
   width: 100%;
 
-  &__scrollblock {
+  &__content {
     display: block;
     width: 100%;
     position: relative;
     z-index: 1;
-    max-height: calc(100vh - 185px);
-
-    @include screen('md') {
-      max-height: calc(100vh - 245px);
-    }
-
-    @include screen('sm') {
-      max-height: calc(100vh - 160px);
-    }
-
-    .page.is-short {
-      max-height: calc(100vh - 140px);
-
-      @include screen('md') {
-        max-height: calc(100vh - 200px);
-      }
-
-      @include screen('sm') {
-        max-height: calc(100vh - 136px);
-      }
-    }
   }
 
   &__form {
