--- a/app/pages/search-result/search-result.pug
+++ b/app/pages/search-result/search-result.pug
@@ -5,7 +5,7 @@ block head
 
 block header
   -var headerClass = '_border _no-mob-border'
-  -var pageClass = '_subnav'
+  -var pageClass = ''
 
 block content
   -var spaces = getData('search-spaces.json')
