new version map for mobile

--- a/app/blocks/map-switch/map-switch.scss
+++ b/app/blocks/map-switch/map-switch.scss
@@ -29,8 +29,12 @@
   }
 
   &.is-active {
-    z-index: 9;
+    z-index: 11;
     background-image: linear-gradient(to left, rgba(15, 177, 204, 0.79) 0%, rgba(48, 227, 201, 0.79) 100%);
+  }
+
+  #{$b}_old-mobile-version.is-active {
+    z-index: 9;
   }
 
   &__icon {
