--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -453,9 +453,13 @@
         box-sizing: border-box;
         padding: 9px 9px 16px;
         background-color: $color-white;
+        border-radius: 3px;
+        box-shadow: 1px 1px 8px rgba(34, 42, 46, 0.06);
 
         @include screen('sm') {
           padding: 6px 6px 0;
+          box-shadow: 1px 1px 4px rgba(34, 42, 46, 0.06);
+          border-radius: 2px;
         }
       }
 
@@ -485,6 +489,8 @@
           width: 18px;
           height: 43px;
           padding-left: 0;
+          box-shadow: 1px 1px 4px rgba(34, 42, 46, 0.06);
+          border-radius: 2px;
         }
 
         &:hover {
