--- a/app/components/filter/filter.pug
+++ b/app/components/filter/filter.pug
@@ -55,6 +55,6 @@ mixin filter-search()
           option(value="Brixton") Brixton
           option(value="Richmond") Richmond
       +e.wrapper
-        +toggle().__toggle.js-show-advanced-filter(data-target-filter="workplace") Workplace type
+        +toggle-changed-name().__toggle.js-show-advanced-filter(data-target-filter="workplace" data-default-name="Workplace type") Workplace type
       +e.wrapper
         +toggle('0').__toggle.js-show-advanced-filter(data-target-filter="advancedSearch") Advanced search
