--- a/app/components/search-filter/search-filter.scss
+++ b/app/components/search-filter/search-filter.scss
@@ -216,7 +216,7 @@
       }
     }
 
-    #{$b}.is-filter-active & {
+    #{$b}__popup.is-active & {
       visibility: visible;
       opacity: 1;
       pointer-events: auto;
