--- a/app/blocks/places/places.pug
+++ b/app/blocks/places/places.pug
@@ -1,10 +1,10 @@
 mixin places()
   +b.UL.places&attributes(attributes)
     +e.LI.place
-      +button-radio('workplace', 'hd', true)._orange.__radio HOT DESK
+      +button-radio('workplace', 'hd', true)._orange.__radio.js-close-advanced-filter.js-change-filter-name(data-target-filter-name="workplace" data-new-filter-name="Hot desk") HOT DESK
     +e.LI.place
-      +button-radio('workplace', 'dd')._red.__radio DEDICATED DESK
+      +button-radio('workplace', 'dd')._red.__radio.js-close-advanced-filter.js-change-filter-name(data-target-filter-name="workplace" data-new-filter-name="Dedicated desk") DEDICATED DESK
     +e.LI.place
-      +button-radio('workplace', 'mr')._blue.__radio MEETING ROOM
+      +button-radio('workplace', 'mr')._blue.__radio.js-close-advanced-filter.js-change-filter-name(data-target-filter-name="workplace" data-new-filter-name="Meeting room") MEETING ROOM
     +e.LI.place
-      +button-radio('workplace', 'os')._green.__radio OFFICE SPACE
+      +button-radio('workplace', 'os')._green.__radio.js-close-advanced-filter.js-change-filter-name(data-target-filter-name="workplace" data-new-filter-name="Office space") OFFICE SPACE
