fixes for bottom panel

--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -7,14 +7,14 @@
   width: 100%;
   max-width: 100vw;
   z-index: 10;
-  transition: all $ease-main;
+  transition: background $ease-main, padding $ease-main, border $ease-main;
   background-color: $color-bg;
   box-sizing: border-box;
   padding: 28px 0 31px;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
   overflow: hidden;
-  will-change: padding;
+  backface-visibility: hidden;
 
   @include screen('sm') {
     padding: 16px 0;
