--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -15,6 +15,8 @@
   border-bottom: 1px solid transparent;
   overflow: hidden;
   backface-visibility: hidden;
+  transform: translate3d(0, 0, 0);
+  overscroll-behavior: none;
 
   @include screen('sm') {
     padding: 16px 0;
