--- a/app/components/search-filter/search-filter.scss
+++ b/app/components/search-filter/search-filter.scss
@@ -224,6 +224,7 @@
 
     #{$b}__popup.is-absolute-bottom & {
       position: absolute;
+      bottom: -70px;
 
       .container {
         width: 100%;
