--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -7,7 +7,8 @@
   width: 100%;
   max-width: 100vw;
   z-index: 10;
-  transition: background $ease-main, padding $ease-main, border $ease-main;
+  display: block;
+  transition: background $ease-main, border $ease-main;
   background-color: $color-bg;
   box-sizing: border-box;
   padding: 28px 0 31px;
@@ -15,7 +16,6 @@
   border-bottom: 1px solid transparent;
   overflow: hidden;
   backface-visibility: hidden;
-  transform: translate3d(0, 0, 0);
   overscroll-behavior: none;
 
   @include screen('sm') {
