--- a/app/blocks/page/page.scss
+++ b/app/blocks/page/page.scss
@@ -9,27 +9,11 @@
     padding-top: 74px;
   }
 
-  &.is-short {
-    padding-top: 70px;
+  // &.is-short {
+  //   padding-top: 70px;
 
-    @include screen('sm') {
-      padding-top: 50px;
-    }
-  }
-
-  &_subnav {
-    padding-top: 185px;
-
-    @include screen('sm', max) {
-      padding-top: 100px;
-    }
-
-    &.is-short {
-      padding-top: 140px;
-
-      @include screen('sm') {
-        padding-top: 76px;
-      }
-    }
-  }
+  //   @include screen('sm') {
+  //     padding-top: 50px;
+  //   }
+  // }
 }
