--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -1,25 +1,27 @@
 mixin header(host)
   - var isAuthorized = authorized ? 'is-login' : '';
   +b.HEADER.header&attributes(attributes)(class=isAuthorized)
-    .container
-      +e.logo
-        +logo()(href="/")
-      +e.NAV.navigation(data-rounding-target)
-        +e.main
-          +header-menu
-        +e.user
-          +header-user(host)
-      +e.burger
-        +burger
+    +e.wrapper
+      .container
+        +e.logo
+          +logo()(href="/")
+        +e.NAV.navigation(data-rounding-target)
+          +e.main
+            +header-menu
+          +e.user
+            +header-user(host)
+        +e.burger
+          +burger
 
 
 mixin header-special()
   +b.HEADER.header_special&attributes(attributes)(class=isAuthorized)
-    .container
-      +e.logo
-        +logo()(href="/")
-      +slogan.__slogan COMING SOON...
-      +e.NAV.navigation(data-rounding-target)
-        +header-menu-special.hide-md
-      +e.burger.hide-from-md
-        +burger
+    +e.wrapper
+      .container
+        +e.logo
+          +logo()(href="/")
+        +slogan.__slogan COMING SOON...
+        +e.NAV.navigation(data-rounding-target)
+          +header-menu-special.hide-md
+        +e.burger.hide-from-md
+          +burger
