--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -1,17 +1,21 @@
 .header {
   $b: &;
 
-  position: fixed;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 0;
   left: 0;
   width: 100%;
   max-width: 100vw;
   z-index: 10;
-  display: block;
-  transition: background $ease-main, border $ease-main;
+  transition:
+    background $ease-main,
+    border $ease-main;
   background-color: $color-bg;
   box-sizing: border-box;
-  padding: 28px 0 31px;
+  height: 115px;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
   overflow: hidden;
@@ -19,16 +23,45 @@
   overscroll-behavior: none;
 
   @include screen('sm') {
-    padding: 16px 0;
+    height: 74px;
+  }
+
+  &__wrapper {
+    transition:
+      background $ease-main,
+      border $ease-main;
+    position: absolute;
+    top: 19px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+    box-sizing: border-box;
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    background-color: $color-bg;
+
+    @include screen('sm') {
+      top: 13px;
+      height: 50px;
+    }
+
+    #{$b}.is-short & {
+      position: fixed;
+      top: 0;
+      background-color: $color-white;
+      border-bottom-color: $color-border-light;
+    }
   }
 
   &.is-short {
-    background-color: $color-white;
-    border-bottom-color: $color-border-light;
-    padding: 7px 0;
+    height: 70px;
+    // background-color: $color-white;
+    // border-bottom-color: $color-border-light;
 
     @include screen('sm') {
-      padding: 4px 0;
+      height: 50px;
     }
   }
 
